# Power-Quality-Waveform-Analyser

./: CMakeLists.txt  README.md  io.c  io.h  main.c  waveform.c  waveform.h
test_data/: fault_test.csv
